welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:12: error: too many arguments for method estFaceMur: ()Boolean
  if (!estFaceMur(6)){
                 ^SnakeBuggle:34: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:34: warning: enclosing method pos has result type Unit: return value discarded
      return true
      ^SnakeBuggle:39: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return true
             ^SnakeBuggle:39: warning: enclosing method pos has result type Unit: return value discarded
      return true
      ^SnakeBuggle:41: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^SnakeBuggle:41: warning: enclosing method pos has result type Unit: return value discarded
      return false
      ^