welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
	baisseBrosse()
  while (pos()!=true){
    serpent()
  }
}




def serpent(){
  if (!estFaceMur(6)){
    avance()
  }else{
    if (getDirection()==Direction.EST){
    gauche()
    avance()
    gauche()
    
    }else if(getDirection()==Direction.OUEST){
    droite()
    avance()
    droite()
  }
}
}



def pos(){
  if (getDirection()==Direction.EST){
    gauche()
    if ( estFaceMur()==true ){
      return true
    }
  }else if(getDirection()==Direction.OUEST){
    droite()
    if ( estFaceMur()==true){
      return true
    }else{
      return false
    }
  }
}
  
